# corebrum-examples

./: .gitignore  Cargo.toml  README.md
orchestration/: README.md  advanced_orchestrator.sh  cmos_orchestrator.sh  mesh_orchestrator.sh
src/: dynamic_executor.rs  fixed_user_demo.rs  fixed_zenoh_demo.rs  lib.rs  schema.rs  simple_user_demo.rs  simple_user_zenoh_demo.rs  simple_zenoh_demo.rs  simple_zenoh_demo_fixed.rs  user_demo.rs  working_user_demo.rs  working_user_zenoh_demo.rs  zenoh_utils.rs
src/task_gists/: factorial.py  fibonacci.py
task_definitions/: README.md  docker_task.yaml  docker_with_dependencies.yaml  factorial_wasm.yaml  factorial_wasm_url.yaml  fibonacci_from_gist.json  git_repo_task.json  multi_dependency_task.yaml  python_with_dependencies.yaml  simple_test.yaml  very_simple_test.yaml
task_definitions/docker/: README.md  docker_task.yaml  docker_with_dependencies.yaml  factorial_docker.yaml
task_definitions/general/: README.md  mixed_sources_demo.yaml  multi_dependency_task.yaml  simple_test.yaml  stream_stdin_stdout.yaml
task_definitions/memory/: README.md  memory_cache_example.yaml  state_sharing.yaml
task_definitions/python/: README.md  factorial_from_url.yaml  factorial_stdin_stdout.yaml  factorial_task.yaml  fibonacci_task.json  python_with_dependencies.yaml
task_definitions/ros2/: README.md  basic_test.yaml  battery_monitor.yaml  camera_frame_analysis.yaml  camera_publisher.yaml  follow_person.yaml  monitor_debug.sh  monitor_twist_commands.py  multi_robot_formation.yaml  object_detection.yaml  person_follow_qwen.yaml  person_follow_simple.yaml  simple_camera_test.yaml  simple_image_processing.yaml  simple_qwen_test.yaml  stream_test.yaml  test_person_follow.sh  zenoh_message_in.yaml  zenoh_message_in_out.yaml  zenoh_person_follow.py
task_definitions/sequential/: README.md  sequential_ai_pipeline.yaml  sequential_data_transform.yaml  sequential_pipeline.yaml  sequential_stdin_stdout.yaml
task_definitions/storage/: README.md  factorial_with_cache.yaml  store_and_retrieve.yaml
task_definitions/wasm/: README.md
wasm_factorial/: Cargo.toml  build.sh
wasm_factorial/src/: lib.rs
wasm_factorial_url/: Cargo.toml
wasm_factorial_url/src/: lib.rs
