[package]
name = "wasm-factorial-url"
version = "0.1.0"
edition = "2021"
authors = ["Corebrum Team"]
license = "All Rights Reserved"
description = "WebAssembly factorial computation module for URL-based execution in Corebrum platform"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]
